[gd_scene load_steps=7 format=3 uid="uid://cw8jub6h383rn"]

[ext_resource type="Script" path="res://scripts/UI/Connect_Menu.gd" id="1_oq71q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3qp4v"]

[sub_resource type="InputEventKey" id="InputEventKey_0pj7u"]
device = -1
keycode = 72
unicode = 104

[sub_resource type="Shortcut" id="Shortcut_wuk04"]
events = [SubResource("InputEventKey_0pj7u")]

[sub_resource type="InputEventKey" id="InputEventKey_50lbq"]
device = -1
keycode = 74
unicode = 106

[sub_resource type="Shortcut" id="Shortcut_prmu1"]
events = [SubResource("InputEventKey_50lbq")]

[node name="Connect_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oq71q")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -182.0
offset_right = 264.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_3qp4v")

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.505882, 0.741176, 0.615686, 1)
theme_override_colors/font_shadow_color = Color(0.223529, 0.223529, 0.223529, 0.996078)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 71
text = "Tank Action"

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.505882, 0.741176, 0.615686, 1)
theme_override_colors/font_shadow_color = Color(0.223529, 0.223529, 0.223529, 0.996078)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 15
text = "with friends"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer3"]
layout_mode = 2

[node name="Host" type="Button" parent="PanelContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2
shortcut = SubResource("Shortcut_wuk04")
text = "Host"

[node name="Join" type="Button" parent="PanelContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2
shortcut = SubResource("Shortcut_prmu1")
text = "Join
"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Tank Name"

[node name="CustomTankName" type="LineEdit" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Unnamed Tank"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="PanelContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/Panel"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
text = "ADRESS:"

[node name="ServerJoinAddress" type="LineEdit" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "localhost"

[node name="Panel2" type="PanelContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/Panel2"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/Panel2/HBoxContainer"]
layout_mode = 2
text = "PORT:"

[node name="ServerJoinPort" type="LineEdit" parent="PanelContainer/VBoxContainer3/VBoxContainer2/HBoxContainer/Panel2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5001"

[connection signal="pressed" from="PanelContainer/VBoxContainer3/VBoxContainer2/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer3/VBoxContainer2/Join" to="." method="_on_join_pressed"]
